# gift-concierge

./: main.py  out_sample.txt  pyproject.toml
config/: config.yaml  param.yaml
notebooks/: Part01-web_crawiling.ipynb  check_llm.ipynb  check_st.ipynb  crawling_test.ipynb  out.md  out1.md  pipeline_test.ipynb  test_rag.ipynb
scripts/: import_faqs_to_cache.py  ingest_to_qdrant.py  run_faq_ingest.py
src/applications/ingest_document_service/: __init__.py  web_crawler.py
src/infrastructure/: config.py  models.py  observability.py  utils.py
src/infrastructure/db/: qdrant_client.py
src/infrastructure/llm/: embeddings.py  llm_provider.py
src/memory/: st_store.py
src/services/chat_service/: cag_cache.py  cag_service.py  crag_service.py  rag_service.py  rag_templates.py
src/services/ingest_service/: __init__.py  chunkers.py  faq_ingest.py  pipeline.py  web_crawler.py  web_crawlerV2.py
