[project]
name = "gift-concierge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "markdownify>=1.2.2",
    "pytest-playwright>=0.7.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "tiktoken>=0.12.0",
]
