[project]
name = "gift-concierge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docling>=2.85.0",
    "dotenv>=0.9.9",
    "html2text>=2025.4.15",
    "langchain>=1.2.15",
    "langchain-core>=1.2.27",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langfuse>=4.2.0",
    "loguru>=0.7.3",
    "markdownify>=1.2.2",
    "pytest-playwright>=0.7.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "tiktoken>=0.12.0",
]
